kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/constraintchecker_tests/invalid/025_weaving_in_kermeta_aspect4.kmt
/* $Id: 025_weaving_in_kermeta_aspect4.kmt,v 1.1 2007-09-10 08:35:12 cfaucher Exp $ */

// Type checking on simple control stucts

package weavinginvalidtest4;

require kermeta
require "025_weaving_in_kermeta_aspect4/025_weaving_in_kermeta_aspect4_baseClass.kmt"

using kermeta::standard

@aspect "true"
@anothertag "othertagvalue"
class A {


}

@aspect "true"
class B {}


@aspect "true"
class C {

	 operation returnString(toto : String ) : String is do // invalid because of incompatible signatures
		result := "a string"
	end 
	operation test1(param : A) : Void is do
		a == b
		a == d
	end
	
	operation test0(param : A) : Void 
	pre mypre is true
	post mypost is true
	is abstract
		
	attribute a : A
	attribute c : A
	attribute d : B

}

@aspect "false"
class D{
}
/* END OF FILE */